corrigindo divs certs

--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,6 @@ hr {
     width: 150px;
 }
 .certs-container {
-    height: 520px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -178,13 +177,18 @@ hr {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .polaroid img {
-    width: 300px;
+    max-width: 300px;
 }
 .descricao {
     text-align: center;
     background-color: #414a52;
     padding: 10px 20px;
     color: white;
+}
+@media (max-width: 1224px) {
+    .descricao {
+        font-size: 20px;
+    }
 }
 .contato-container {
     display: flex;
